Fix main-articles flex-wrap behaviour

--- a/sprint1/nivell_1/css/styles.css
+++ b/sprint1/nivell_1/css/styles.css
@@ -55,23 +55,20 @@ main{
 .main-articles {
     display: flex;  
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 1em;
+    justify-content: space-between;
     gap: 1em;
+    padding: 1em;
     border-right: 0.25em solid hsl(0, 0%, 0%);
     background-color: hsl(218, 26%, 33%);
 }
 
-.main-articles article,
-.main-articles p  {
+.main-articles article {
+    flex: 1 0 auto;
     width: 20em;
     height: 2em;    
-    background-color: hsl(218, 93%, 70%)
+    background-color: hsl(218, 93%, 70%);
 }
 
-.main-articles p {
-    flex-grow: 1;
-}
 /* .............................................. */
 aside {
     display: flex;
